--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -2,6 +2,7 @@
 
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
+	<dimen name="activity_horizontal_margin_bubble">2dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
 	<dimen name="nemo.bubble_sidemargin">25dp</dimen>
 	<dimen name="nemo.bubble_topmargin">10dp</dimen>
