--- a/res/values/strings_custom.xml
+++ b/res/values/strings_custom.xml
@@ -48,13 +48,13 @@
 
 	<string name="defaultcommands">[
   {
-    "imgid": 0,
-    "cmd": "Look",
-    "atonce": true
+    "imgid": 42,
+    "cmd": "Go",
+    "atonce": false
   },
   {
-    "imgid": 1,
-    "cmd": "Examine",
+    "imgid": 0,
+    "cmd": "Look",
     "atonce": false
   },
   {
@@ -77,12 +77,12 @@
     "cmd": "Inventory",
     "atonce": true
   },
-    {
+  {
     "imgid": 15,
     "cmd": "Pull",
     "atonce": false
   },
-    {
+  {
     "imgid": 14,
     "cmd": "Push",
     "atonce": false
@@ -102,12 +102,396 @@
     "cmd": "Give",
     "atonce": false
   },
-    {
+  {
     "imgid": 11,
     "cmd": "Wait",
     "atonce": true
   }
-
+  
 ]</string>
 
+	<string name="defaultcommands_0">[
+  {
+    "imgid": 32,
+    "cmd": "north",
+    "atonce": true
+  },
+  {
+    "imgid": 33,
+    "cmd": "south",
+    "atonce": true
+  },
+  {
+    "imgid": 34,
+    "cmd": "west",
+    "atonce": true
+  },
+  {
+    "imgid": 35,
+    "cmd": "east",
+    "atonce": true
+  },
+  {
+    "imgid": 36,
+    "cmd": "northwest",
+    "atonce": true
+  },
+  {
+    "imgid": 37,
+    "cmd": "northeast",
+    "atonce": true
+  },
+  {
+    "imgid": 38,
+    "cmd": "southwest",
+    "atonce": true
+  },
+  {
+    "imgid": 39,
+    "cmd": "southeast",
+    "atonce": true
+  },
+  {
+    "imgid": 40,
+    "cmd": "up",
+    "atonce": true
+  },
+  {
+    "imgid": 41,
+    "cmd": "down",
+    "atonce": true
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  }
+
+]</string>		
+	
+	<string name="defaultcommands_1">[
+  {
+    "imgid": 0,
+    "cmd": \"\",
+    "atonce": true
+  },
+  {
+    "imgid": 1,
+    "cmd": \"^Examine\",
+    "atonce": false
+  },
+ {
+    "imgid": 40,
+    "cmd": \"at\",
+    "atonce": false
+  },
+  {
+    "imgid": 41,
+    "cmd": \"under\",
+    "atonce": false
+  },
+  {
+    "imgid": 14,
+    "cmd": \"in\",
+    "atonce": false
+  },
+  {
+    "imgid": 15,
+    "cmd": \"out\",
+    "atonce": false
+  },
+  {
+    "imgid": 23,
+    "cmd": \"through\",
+    "atonce": false
+  },
+  {
+    "imgid": 32,
+    "cmd": \"north\",
+    "atonce": true
+  },
+  {
+    "imgid": 33,
+    "cmd": \"south\",
+    "atonce": true
+  },
+  {
+    "imgid": 34,
+    "cmd": \"west\",
+    "atonce": true
+  },
+  {
+    "imgid": 35,
+    "cmd": \"east\",
+    "atonce": true
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  }
+
+]</string>		
+
+	<string name="defaultcommands_de">[
+  {
+    "imgid": 42,
+    "cmd": "Geh",
+    "atonce": false
+  },
+  {
+    "imgid": 0,
+    "cmd": "Schau",
+    "atonce": false
+  },
+  {
+    "imgid": 8,
+    "cmd": "Nimm",
+    "atonce": false
+  },
+  {
+    "imgid": 5,
+    "cmd": "Öffne",
+    "atonce": false
+  },
+  {
+    "imgid": 6,
+    "cmd": "Schließe",
+    "atonce": false
+  },
+  {
+    "imgid": 7,
+    "cmd": "Inventar",
+    "atonce": true
+  },
+  {
+    "imgid": 15,
+    "cmd": "Zieh",
+    "atonce": false
+  },
+  {
+    "imgid": 14,
+    "cmd": "Schieb",
+    "atonce": false
+  },
+  {
+    "imgid": 2,
+    "cmd": "Lies",
+    "atonce": false
+  },
+  {
+    "imgid": 24,
+    "cmd": "Leg",
+    "atonce": false
+  },
+  {
+    "imgid": 22,
+    "cmd": "Gebe",
+    "atonce": false
+  },
+  {
+    "imgid": 11,
+    "cmd": "Warte",
+    "atonce": false
+  }
+  
+]</string>
+
+	<string name="defaultcommands_de_0">[
+  {
+    "imgid": 32,
+    "cmd": \"nach Norden.\",
+    "atonce": true
+  },
+  {
+    "imgid": 33,
+    "cmd": \"nach Süden.\",
+    "atonce": true
+  },
+  {
+    "imgid": 34,
+    "cmd": \"nach Westen.\",
+    "atonce": true
+  },
+  {
+    "imgid": 35,
+    "cmd": \"nach Osten.\",
+    "atonce": true
+  },
+  {
+    "imgid": 36,
+    "cmd": \"nach Nordwesten.\",
+    "atonce": true
+  },
+  {
+    "imgid": 37,
+    "cmd": \"nach Nordosten.\",
+    "atonce": true
+  },
+  {
+    "imgid": 38,
+    "cmd": \"nach Südwesten.\",
+    "atonce": true
+  },
+  {
+    "imgid": 39,
+    "cmd": \"nach Südosten.\",
+    "atonce": true
+  },
+  {
+    "imgid": 40,
+    "cmd": \"nach oben.\",
+    "atonce": true
+  },
+  {
+    "imgid": 41,
+    "cmd": \"nach unten.\",
+    "atonce": true
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  }
+
+]</string>		
+	
+	<string name="defaultcommands_de_1">[
+  {
+    "imgid": 0,
+    "cmd": \"\",
+    "atonce": true
+  },
+ {
+    "imgid": 1,
+    "cmd": "^Untersuch",
+    "atonce": false
+  },
+ {
+    "imgid": 40,
+    "cmd": "auf",
+    "atonce": false
+  },
+  {
+    "imgid": 41,
+    "cmd": "unter",
+    "atonce": false
+  },
+  {
+    "imgid": 14,
+    "cmd": "in",
+    "atonce": false
+  },
+  {
+    "imgid": 15,
+    "cmd": "aus",
+    "atonce": false
+  },
+  {
+    "imgid": 23,
+    "cmd": "durch",
+    "atonce": false
+  },
+  {
+    "imgid": 32,
+    "cmd": \"nach Norden.\",
+    "atonce": true
+  },
+  {
+    "imgid": 33,
+    "cmd": \"nach Süden.\",
+    "atonce": true
+  },
+  {
+    "imgid": 34,
+    "cmd": \"nach Westen.\",
+    "atonce": true
+  },
+  {
+    "imgid": 35,
+    "cmd": \"nach Osten.\",
+    "atonce": true
+  },
+  {
+    "imgid": -2,
+    "cmd": \"\",
+    "atonce": false
+  }
+
+]</string>		
+	
+		<string name="emptycommands">[
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  },
+  {
+    "imgid": 43,
+    "cmd": \"\",
+    "atonce": false
+  }
+
+]</string>		
+		
 </resources>
