--- a/res/menu/game.xml
+++ b/res/menu/game.xml
@@ -24,6 +24,10 @@
 		android:title="@string/mi_restart">
 	</item>
 	<item
+		android:id="@+id/mi_WriteStoryLanguageFiles"
+		android:title="@string/mi_WriteStoryLanguageFiles">
+	</item>
+	<item
 		android:id="@+id/mi_help"
 		android:icon="@drawable/ic_action_help"
 		android:title="@string/mi_help">
