--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -31,10 +31,10 @@
 			android:id="@+id/window_flipper"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:paddingBottom="@dimen/activity_vertical_margin"
+			android:paddingBottom="8dp"
 			android:paddingLeft="@dimen/activity_horizontal_margin_bubble"
 			android:paddingRight="@dimen/activity_horizontal_margin_bubble"
-			android:paddingTop="@dimen/activity_vertical_margin" >
+			android:paddingTop="0dp" >
 
 			<ListView
 				android:id="@+id/storyboard"
