--- a/res/values/strings_custom.xml
+++ b/res/values/strings_custom.xml
@@ -39,6 +39,17 @@
 		<item>nordwesten</item>
 	</string-array>
 
+	<string-array name="initial_highlights_es">
+		<item>norte</item>
+		<item>noreste</item>
+		<item>este</item>
+		<item>sureste</item>
+		<item>sur</item>
+		<item>suroeste</item>
+		<item>oeste</item>
+		<item>noroeste</item>
+	</string-array>
+		
 		<!--
     Default values for the compass buttons, starting top/center, going 
 	clockwise, exactly eight items required.
@@ -376,7 +387,7 @@
   }
 
 ]</string>		
-				
+						
 	<string name="defaultcommands_de">[
   {
     "imgid": 42,
@@ -696,6 +707,70 @@
   }
 
 ]</string>		
+				
+	<string name="defaultcommands_es">[
+  {
+    "imgid": 0,
+    "cmd": "Mirar",
+    "atonce": true
+  },
+  {
+    "imgid": 1,
+    "cmd": "Examinar",
+    "atonce": false
+  },
+  {
+    "imgid": 8,
+    "cmd": "Tomar",
+    "atonce": false
+  },
+  {
+    "imgid": 5,
+    "cmd": "Abrir",
+    "atonce": false
+  },
+  {
+    "imgid": 6,
+    "cmd": "Cerrar",
+    "atonce": false
+  },
+  {
+    "imgid": 7,
+    "cmd": "Inventario",
+    "atonce": true
+  },
+    {
+    "imgid": 15,
+    "cmd": "Tirar",
+    "atonce": false
+  },
+    {
+    "imgid": 14,
+    "cmd": "Empujar",
+    "atonce": false
+  },
+  {
+    "imgid": 2,
+    "cmd": "Leer",
+    "atonce": false
+  },
+  {
+    "imgid": 24,
+    "cmd": "Dejar",
+    "atonce": false
+  },
+  {
+    "imgid": 22,
+    "cmd": "Dar",
+    "atonce": false
+  },
+    {
+    "imgid": 11,
+    "cmd": "Esperar",
+    "atonce": true
+  }
+
+]</string>
 		
 		<string name="emptycommands">[
   {
